<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_design"
    android:orientation="vertical"
    tools:context=".Activities.LoginActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="150dp"
        android:text="@string/login"
        android:textColor="#fff"

        android:textSize="36sp" />

    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintEmail"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:inputType="textEmailAddress"
        android:background="@drawable/inputs"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"
        />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintPassword"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:inputType="textPassword"
        android:background="@drawable/inputs"
        android:padding="10dp"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="10dp"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:background="@color/black"
        android:radius="20dp"
        android:text="@string/loginButton"
        android:textAllCaps="false"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/loginPageRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/redirectToRegister"
        android:textColor="#fff"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp"
        android:text="@string/otherSignInOptions"
        android:textColor="#fff"
        android:gravity="center"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/google_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:radius="20dp"
        android:text="@string/signInWithGoogle"
        android:textAllCaps="false"
        android:textColor="#fff" />
</LinearLayout>